--- a/Pipeline_Model.ipynb
+++ b/Pipeline_Model.ipynb
@@ -316,7 +316,7 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "1. **Basic Model:**\n",
+        "**1. Basic Model:**\n",
         "   - Model Accuracy: 0.87976\n",
         "   - This model uses logistic regression and the CountVectorizer for feature extraction.\n",
         "\n",
@@ -327,7 +327,7 @@
         "   - The model's performance indicates that it can effectively predict sentiment based on the given features.\n",
         "   - However, there may still be room for improvement as the accuracy could potentially be further enhanced.\n",
         "\n",
-        "2. **Improved Model:**\n",
+        "**2. Improved Model:**\n",
         "   - Model Accuracy: 0.8936\n",
         "   - This model utilizes LinearSVC and the TfidfVectorizer for feature extraction.\n",
         "\n",
